# cpp-hangman

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.h  main.cpp  vector.h
